# Agentic-TTS-Studio

./: .env.example  .gitignore  README.md  models  package.json  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: backend-developer.md  debugger.md  frontend-developer.md
.claude/memory/: architecture.md  runtime-and-models.md
Qwen3-TTS/: README.md
Qwen3-TTS/finetuning/: sft_voicebox_12hz.py
Qwen3-TTS/fusion/: make_voicebox_checkpoint.py
app/: globals.css  layout.tsx  page.tsx
backend/: .env.example  .env.local  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: app.module.ts  main.ts
components/: studio-shell.tsx
data/records/: assets.json  audio-tool-jobs.json  history.json
docs/cheatsheet/: 00-learning-path.md  01-javascript-basics.md  02-typescript-basics.md  03-javascript-vs-typescript.md  04-what-is-nextjs.md  05-app-router-basics.md  06-server-vs-client-components.md  07-api-routes-and-data-flow.md  08-react-state-and-events.md  09-what-is-langchain.md  10-tools-prompts-and-agent-thinking.md  11-local-ai-runtime-and-python-bridge.md  12-how-this-project-fits-together.md
docs/cookbook/: 00-index.md  01-project-map.md  02-nextjs-app-router.md  03-home-page-and-shell.md  04-backend-api-ownership.md  04-chat-api-route.md  05-langchain-agent.md  06-langchain-tools.md  07-local-runtime.md  09-docs-route.md  (+6 more)
frontend/: .env.example  package-lock.json  package.json
scripts/: bootstrap-local-models.sh  download-models.sh  run_audio_tools.py  run_gemma_chat.py  run_qwen_tts.py  run_whisper_transcribe.py
(+50 files in other folders)
