[project]
name = "agentic-tts-studio-python"
version = "0.1.0"
description = "Project-local Python runtime for Agentic TTS Studio"
requires-python = ">=3.11,<3.12"
dependencies = [
  "certifi>=2026.2.25",
  "einops",
  "hf-transfer>=0.1.9",
  "huggingface_hub>=0.34.0",
  "onnxruntime",
  "pip>=24.0",
  "qwen-tts",
  "sentencepiece",
  "setuptools>=81.0.0",
  "soundfile>=0.13.0,<1.0.0",
  "sox",
  "torch==2.11.0",
  "torchaudio==2.11.0",
  "wheel>=0.46.0",
]

[tool.uv]
package = false

[tool.uv.sources]
qwen-tts = { path = "../Qwen3-TTS-Demo/Qwen3-TTS", editable = true }
torch = { index = "pytorch-cu130" }
torchaudio = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
